Z-index fixed

--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ footer h3 {
     bottom: 0;
     left: 0;
     right: 0; 
-    z-index: 2;
+    z-index: 1;
   }
   
   .mobile-menu a{
